hphp/hack/test/typecheck/aktuple/vec_literal_error.php.exp
File "vec_literal_error.php", line 6, characters 15-19:
Invalid argument (Typing[4110])
  File "vec_literal_error.php", line 9, characters 22-27:
  Expected `string`
  File "vec_literal_error.php", line 4, characters 12-12:
  But got `int`
